# self-driving

./: .gitignore  CLAUDE.md  PLAN.md  main.py  pyproject.toml
src/self_driving/: actors.py  behavioral_planner.py  controller.py  localization.py  map_gen.py  models.py  path_planning.py  pure_pursuit.py  routing.py  sensors.py  simulation.py  telemetry.py  vehicle.py  visualizer.py  world.py
tests/: conftest.py  test_actors.py  test_behavioral_planner.py  test_controller.py  test_integration.py  test_localization.py  test_map_gen.py  test_path_planning.py  test_pure_pursuit.py  test_routing.py  test_sensors.py  test_traffic_lights.py  test_vehicle.py
