[project]
name = "self-driving"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "networkx>=3.3",
    "numpy>=1.26",
    "shapely>=2.0",
    "pygame>=2.6",
    "matplotlib>=3.10.8",
    "casadi>=3.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "anyio[trio]>=4.4",
    "ruff>=0.4",
    "pyrefly>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_driving"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
